# start-leptos

./: .gitignore  Cargo.toml  README.md  TODO.md  ask_makefile.rhai  ask_project_name.rhai  ask_stylelint.rhai  ask_tailwind.rhai  ask_template.rhai  ask_tracing.rhai  cargo-generate.toml  end.rhai  npm_packages.rhai  package.json
Docker/: Dockerfile  docker-compose.yml
app/: Cargo.toml
app/src/: app.rs  lib.rs  shell.rs
app/src/pages/: home.rs
benchmark/: Cargo.toml
benchmark/src/: cli.rs  errors.rs  lib.rs  main.rs
benchmark/src/benchmarks/: benchmark_result.rs  core.rs  mod.rs
e2e-tests/: Cargo.toml
e2e-tests/features/: homepage.feature
e2e-tests/src/: leptos_server.rs  lib.rs  main.rs  run.rs  trace.rs
e2e-tests/src/app_world/: action.rs  console_log.rs  core.rs  mod.rs
e2e-tests/src/utils/: chrome_driver.rs  global_server_addr.rs  mod.rs  port_finder.rs  webdriver.rs
frontend/src/: lib.rs
hooks/: init.rhai  initialize.rhai  post.rhai  variable.rhai
leptos-csr/: .gitignore  Cargo.toml  index.html  trace.rhai
leptos-csr/end-to-end/: package-lock.json  package.json
leptos-csr/src/: lib.rs  main.rs
leptos-project/: .gitignore  Cargo-normal-cucumber.toml  Cargo-normal.toml  Cargo-tracing-cucumber.toml  Cargo-tracing.toml  Cargo.toml  trace.rhai
leptos-project/end-to-end/tests/: test.spec.ts
leptos-project/end2end/: playwright.config.ts
leptos-project/src/: app.rs  lib-normal.rs  lib-tracing.rs  lib.rs  main-normal.rs  main-tracing.rs  main.rs  ssr-normal.rs  ssr-tracing.rs  ssr.rs
leptos-project/src/ssr/: debug.rs  server.rs  trace.rs
leptos-tailwindcss/: Cargo.toml  package.json  tailwind.config.js
leptos-tailwindcss/app/src/: lib.rs
leptos-tailwindcss/frontend/: Cargo.toml
leptos-tailwindcss/server/: Cargo.toml
leptos-thaw/: Cargo.toml
leptos-thaw/app/: Cargo.toml
leptos-thaw/app/src/: lib.rs
leptos-thaw/frontend/: Cargo.toml
leptos-workspace/: .gitignore  Cargo-normal-cucumber.toml  Cargo-normal.toml  Cargo-tracing-cucumber.toml  Cargo-tracing.toml  Cargo.toml  package.json  trace.rhai
leptos-workspace/app/: Cargo-normal.toml  Cargo-tracing.toml  Cargo.toml
leptos-workspace/app/src/: app.rs  error_template.rs  lib.rs  shell.rs
leptos-workspace/app/src/pages/: home.rs
leptos-workspace/app/src/pages/home/: mod.rs  page.rs
leptos-workspace/app/src/pages/home/ws/: client.rs  connection.rs  handler.rs  mod.rs
leptos-workspace/app/src/structs/: message.rs  mod.rs  websocket.rs  websocket_backend.rs  websocket_manager.rs
leptos-workspace/app/src/ws_core/: client.rs  server.rs
leptos-workspace/app/src/ws_core/server/: backend.rs  message.rs  mod.rs  response_sender.rs
leptos-workspace/frontend/: Cargo-normal.toml  Cargo-tracing.toml  Cargo.toml
leptos-workspace/frontend/src/: lib-tracing.rs  lib.rs
leptos-workspace/server/: Cargo-tracing.toml  Cargo.toml
leptos-workspace/server/src/: debug.rs  errors.rs  lib.rs  main-normal.rs  main-tracing.rs  main.rs  server.rs  shutdown_manager.rs  task_supervisor.rs  trace.rs
leptos-workspace/server/src/server/: axum_server.rs  core.rs  errors.rs  mod.rs
leptos-workspace/style/: main.scss
leptos-workspace/websocket_trait/: Cargo.toml
leptos-workspace/websocket_trait/src/: lib.rs
leptos-workspace/websocket_trait/src/server/: backend.rs  mod.rs  response_sender.rs
leptos/server/src/: fileserv.rs
makefile/: cucumber-workspace.toml  cucumber.toml  leptos-workspace.toml  leptos.toml  playwright.toml  utils.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs  server.rs
styles/unocss/: package.json  uno.config.ts
template-test/: Cargo.toml  test.sh
template-test/tests/integration/: basic.rs  main.rs  utils.rs
template-test/tests/integration/snapshots/: integration__basic__default_template.snap  integration__basic__unocss_template.snap  integration__utils__generate_result__all_feature_template_template.snap  integration__utils__generate_result__cucumber_and_playwright_only_template.snap  integration__utils__generate_result__cucumber_only_template.snap  integration__utils__generate_result__default_template_template.snap  integration__utils__generate_result__docker_only_template.snap  integration__utils__generate_result__playwright_only_template.snap  integration__utils__generate_result__style_unocss_only_template.snap  integration__utils__generate_result__tracing_only_template.snap  integration__utils__generate_result__websocket_and_cucumber_and_playwright_only_template.snap  integration__utils__generate_result__websocket_and_cucumber_only_template.snap  integration__utils__generate_result__websocket_and_playwright_only_template.snap  integration__utils__generate_result__websocket_only_template.snap
template-test/tests/integration/utils/: generate_result.rs
tests/cucumber_test/: Cargo.toml  main.rs
tests/cucumber_test/features/: homepage.feature
tests/cucumber_test/src/: leptos_server.rs  lib.rs  main.rs  run.rs  trace.rs
tests/cucumber_test/src/app_world/: action.rs  console_log.rs  core.rs  mod.rs
tests/cucumber_test/src/steps/: homepage.rs
tests/cucumber_test/src/utils/: global_server_addr.rs  mod.rs  port_finder.rs  webdriver.rs
tests/cucumber_test_workspace/: Cargo.toml
tests/cucumber_test_workspace/features/: homepage.feature
tests/cucumber_test_workspace/src/: app_world.rs  env.rs  main.rs
tests/cucumber_test_workspace/src/steps/: homepage.rs
tests/playwright/: package.json  playwright.config.ts
tests/playwright/tests/: homepage.spec.ts
