[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
# leptos = { version = "0.6" {% if nightly == "Yes" %}, features = ["nightly"]{% endif %} }
leptos = { version = "0.6", features = ["nightly"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6" }
{% if style == "Thaw" %}thaw = "0.3" {% endif %} {% if style == "LeptixWithTailwindCSS" %}leptix_primitives = "0.2" {% endif %}

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1.7"
console_log = "1"
http = "1"
log = "0.4.20"
simple_logger = "4.2.0"
thiserror = "1"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
wasm-bindgen = "=0.2.92"

[[workspace.metadata.leptos]]
name="leptos-workspace"

bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
{% if style == "Default" %}
site-pkg-dir = "pkg"
style-file = "style/main.scss"
{% endif %}
{% if style == "TailwindCSS" or style == "LeptixWithTailwindCSS" %}
tailwind-input-file = "style/tailwind.css"
{% endif %}
{% if style == "Thaw" %}
site-pkg-dir = "thaw"
{% endif %}
assets-dir = "public"

site-addr = "0.0.0.0:8000"
reload-port = 8001

browserquery = "defaults"

watch = false
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
