[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
e2e-tests = { path = "../e2e-tests" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Cli
clap = { version = "4.5.57", features = ["derive"] }

# Error handling
color-eyre = { workspace = true }

# Browser automation via WebDriver
fantoccini = "0.22.0"
