[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
e2e-tests = { path = "../e2e-tests" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Command-line interface
clap = { workspace = true, features = ["derive"] }

# Error handling
anyhow = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

# WebDriver client
fantoccini = { workspace = true }
