[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cucumber"
path = "src/main.rs"

[dependencies]
server = { path = "../server", features = ["ssr", "cucumber"] }

# Async runtime
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
tokio-util = { workspace = true }

# Cucumber BDD framework
cucumber = { workspace = true }

# Browser automation via WebDriver
fantoccini = { workspace = true }

# JSON Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
color-eyre = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
