[workspace]
resolver = "2"
members = ["app", "frontend",{% if cucumber == true %} "tests/cucumber_test",{% endif %} "server"]

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"

[workspace.dependencies]
{%- if websocket == true %}
leptos = { version = "0.8", features = ["rkyv"] }
{%- else %}
leptos = { version = "0.8" }
{%- endif %}
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8" }

# WASM
wasm-bindgen = "0.2"

# Server runtime
axum = "0.8"

# Async runtime
tokio = { version = "1" }
{%- if websocket == true %}
futures = "0.3"
{%- endif %}

# Better error handling
thiserror = "2"

{%- if tracing == true %}

# Logging
console_error_panic_hook = "0.1"                                       # Better panic messages in browser console
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
{%- else %}

# Logging
console_error_panic_hook = "0.1" # Better panic messages in browser console
{%- endif %}

{%- if websocket == true %}

# Codec
rkyv = "0.8"

# Tools
uuid = "1.19"
{%- endif %}

[[workspace.metadata.leptos]]
name = "{{project-name}}"
output-name = "{{project-name}}"

bin-package = "server"
lib-package = "frontend"

style-file = "style/main.scss"
# tailwind-input-file = "style/tailwind.css"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env = "DEV"
watch = false

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
