[workspace]
resolver = "2"
members = ["app", "frontend", "server"{% if websocket == true %}, "websocket_trait"{% endif %}{% if cucumber == true %}, "e2e-tests"{% if benchmark == true %}, "benchmark"{% endif %}{% endif %}]

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 1024

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[workspace.dependencies]
{%- if websocket == true %}
leptos = { version = "0.8", features = ["rkyv"] }
{%- else %}
leptos = { version = "0.8" }
{%- endif %}
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8" }

# WebAssembly
wasm-bindgen = "0.2"

# HTTP server
axum = "0.8"

# Async runtime
tokio = { version = "1" }
tokio-util = "0.7.18"
{%- if websocket == true %}
futures = "0.3"
{%- endif %}

# Error handling
anyhow = "1.0.103"
color-eyre = "0.6"
thiserror = "2"

# Logging
console_error_panic_hook = "0.1.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

{%- if websocket == true %}

# Binary serialization
rkyv = "0.8"

# Utilities
uuid = "1.19"
{%- endif %}

{%- if cucumber == true %}

# JSON serialization
serde = "1.0.228"
serde_json = "1.0.150"

# Command-line interface
clap = "4.6.1"

# WebDriver client
fantoccini = "0.22.1"

# BDD testing
cucumber = "0.23.0"
{%- endif %}

[[workspace.metadata.leptos]]
name = "{{project-name}}"
output-name = "{{project-name}}"

bin-package = "server"
lib-package = "frontend"

style-file = "style/main.scss"
# tailwind-input-file = "style/tailwind.css"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
