[package]
name = "template-test"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
anyhow = "1.0.100"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = [
  "macros",
  "process",
  "rt-multi-thread",
  "test-util",
  "fs",
] }
pretty_assertions = "1.4.1"
libc = "0.2.180"
