[package]
name = "template-test"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
# Error handling
anyhow = "1.0.100"
# Create temporary files at `/tmp`
tempfile = "3.24.0"
# Async runtime
tokio = { version = "1.49.0", features = [
  "macros",
  "process",
  "rt-multi-thread",
  "test-util",
  "fs",
] }
# Low-level TTY hack for `tokio::process::Command
libc = "0.2.180"
# Recursively iterate files
walkdir = "2.5.0"
# JSON snapshots for entire template verification
insta = { version = "1.46.1", features = ["json"] }
# Serialize
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
