[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
{%- if websocket == true %}

# Async runtime
futures = { workspace = true }
tokio = { workspace = true, optional = true }

# Codec
rkyv = { workspace = true, features = ["uuid-1"] }

# Tools
uuid = { workspace = true, features = ["v4"] }
{%- endif %}
{%- if tracing == true %}

# Logging
tracing = { workspace = true, optional = true }
{%- endif %}

[features]
default = []
{%- if websocket == true %}
hydrate = ["leptos/hydrate", "uuid/js"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",

  # Async runtime
  "dep:tokio",

  {%- if tracing == true %}

  # Logging
  "dep:tracing"
  {%- endif %}
]
{%- else %}
hydrate = ["leptos/hydrate"]
{%- if tracing == true %}
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",

    # Logging
    "dep:tracing"
]
{%- else %}
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
{%- endif -%}
{%- endif -%}
