[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
{%- if websocket == true %}

# Member Dependencies
websocket_trait = { path = "../websocket_trait" }
{%- endif %}
{%- if websocket == true %}

# Async runtime
futures = { workspace = true }
tokio = { workspace = true, optional = true }

# Codec
rkyv = { workspace = true, features = ["uuid-1"] }

# Tools
uuid = { workspace = true, features = ["v4"] }
{%- endif %}

# Logging
tracing = { workspace = true, optional = true }

[features]
default = []
{%- if websocket == true %}
hydrate = ["leptos/hydrate", "uuid/js"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",

  # Member Dependencies
  "websocket_trait/ssr",

  # Async runtime
  "dep:tokio",

  {%- if tracing == true %}

  # Logging
  "dep:tracing"
  {%- endif %}
]
{%- else %}
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",

    # Logging
    "dep:tracing"
]
{%- endif -%}
