[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false }
leptos = { workspace = true }

wasm-bindgen.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "app/hydrate"]
