[package]
name = "websocket_trait"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, optional = true }

# Codec
rkyv = { workspace = true }

# Logging
tracing = { workspace = true, optional = true }

[features]
ssr = [
  # Async
  "dep:tokio",

  # Logging
  "dep:tracing",
]
