[package]
name = "cucumber_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cucumber_tests"
path = "src/main.rs"

[dependencies]
server = { path = "../../server", features = ["ssr", "cucumber"] }

# Async runtime
tokio = { version = "1.47.0", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }

# Cucumber BDD framework
cucumber = "0.22.1"

# Browser automation via WebDriver
fantoccini = "0.22.0"

# Json Serialization
serde_json = "1.0.141"

# Error
anyhow = "1.0.100"
color-eyre = "0.6.5"

# Logging
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
